--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,32 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  animate_do: ^4.2.0
+  file_picker: ^9.0.2
+  flex_color_picker: ^3.7.0
   flutter:
     sdk: flutter
+  flutter_context_menu: ^0.2.0
+  flutter_dotenv: ^5.2.1
+  font_awesome_flutter: ^10.8.0
+  formz: ^0.8.0
+  go_router: ^14.8.1
+  image: ^4.4.0
+  image_picker: ^1.1.2
+  logger: ^2.5.0
+  shared_preferences: ^2.5.2
+  transparent_image: ^2.0.1
+  url_launcher: ^6.3.1
+  uuid: ^4.5.1
 
 dev_dependencies:
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - .env
+    - assets/images/
