--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: twitter_cosmos_db
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -8,12 +8,15 @@ environment:
 
 dependencies:
   animate_do: ^4.2.0
+  connectivity_plus: ^6.1.3
+  easy_localization: ^3.0.7+1
   file_picker: ^9.0.2
   flex_color_picker: ^3.7.0
   flutter:
     sdk: flutter
   flutter_context_menu: ^0.2.0
   flutter_dotenv: ^5.2.1
+  flutter_riverpod: ^2.6.1
   font_awesome_flutter: ^10.8.0
   formz: ^0.8.0
   go_router: ^14.8.1
@@ -24,6 +27,7 @@ dependencies:
   transparent_image: ^2.0.1
   url_launcher: ^6.3.1
   uuid: ^4.5.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -36,3 +40,4 @@ flutter:
   assets:
     - .env
     - assets/images/
+    - assets/translations/
