--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   animate_do: ^4.2.0
   connectivity_plus: ^6.1.3
+  easy_image_viewer: ^1.5.1
   easy_localization: ^3.0.7+1
   file_picker: ^9.0.2
   flex_color_picker: ^3.7.0
@@ -22,12 +23,12 @@ dependencies:
   go_router: ^14.8.1
   image: ^4.4.0
   image_picker: ^1.1.2
+  intl: ^0.19.0
   logger: ^2.5.0
   shared_preferences: ^2.5.2
   transparent_image: ^2.0.1
   url_launcher: ^6.3.1
   uuid: ^4.5.1
-  intl: ^0.19.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
