--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   animate_do: ^4.2.0
+  azure_cosmosdb: ^3.0.0
   connectivity_plus: ^6.1.3
   easy_image_viewer: ^1.5.1
   easy_localization: ^3.0.7+1
