--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flex_color_picker: ^3.7.0
   flutter:
     sdk: flutter
+  flutter_appauth: ^9.0.0
   flutter_context_menu: ^0.2.0
   flutter_dotenv: ^5.2.1
   flutter_riverpod: ^2.6.1
