--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   animate_do: ^4.2.0
   azure_cosmosdb: ^3.0.0
   connectivity_plus: ^6.1.3
+  dio: ^5.8.0+1
   easy_image_viewer: ^1.5.1
   easy_localization: ^3.0.7+1
   file_picker: ^9.0.2
